service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  selector:
    app: calendar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
